--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>vCard - Personal Portfolio</title>
+  <title> vCard Personal Web Profile</title>
 
   <!--
     - favicon
@@ -42,17 +42,18 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/my-avatar.png" alt="Richard hanrick" width="80">
+          <img src="./assets/images/my-avatar.png" alt="Dinho Info Artes" width="80">
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Richard hanrick">Richard hanrick</h1>
+          <h1 class="name" title="Richard hanrick">Dinho Info Artes</h1>
 
-          <p class="title">Web developer</p>
+          <p class="title">Desenvolvedor Web</p>
+          <p class="title">Marketing Digital</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
-          <span>Show Contacts</span>
+          <span>Mostrar Contatos</span>
 
           <ion-icon name="chevron-down"></ion-icon>
         </button>
@@ -74,7 +75,7 @@
             <div class="contact-info">
               <p class="contact-title">Email</p>
 
-              <a href="mailto:richard@example.com" class="contact-link">richard@example.com</a>
+              <a href="mailto:contato@dinhoinfoartes.com.br" class="contact-link">contato@dinhoinfoartes.com.br</a>
             </div>
 
           </li>
@@ -86,9 +87,9 @@
             </div>
 
             <div class="contact-info">
-              <p class="contact-title">Phone</p>
+              <p class="contact-title">Fone/WhatsApp</p>
 
-              <a href="tel:+12133522795" class="contact-link">+1 (213) 352-2795</a>
+              <a href="tel:+5591988171057" class="contact-link">+55 (91) 98817-1057</a>
             </div>
 
           </li>
