--- a/index.html
+++ b/index.html
@@ -115,9 +115,23 @@
             </div>
 
             <div class="contact-info">
-              <p class="contact-title">Location</p>
+              <p class="contact-title">WebSite</p>
 
-              <address>Sacramento, California, USA</address>
+              <a href="https://dinhoinfoartes.com.br" class="contact-link">dinhoinfoartes.com.br</a>
+            </div>
+
+          </li>
+          
+          <li class="contact-item">
+
+            <div class="icon-box">
+              <ion-icon name="location-outline"></ion-icon>
+            </div>
+
+            <div class="contact-info">
+              <p class="contact-title">Endereço</p>
+
+              <address>Rua Roberto Regateiro 90(Res. Carmelândia), Belém/PA, Cep: 66640-405</address>
             </div>
 
           </li>
