--- a/index.html
+++ b/index.html
@@ -48,7 +48,11 @@
         <div class="info-content">
           <h1 class="name" title="Richard hanrick">Dinho Info Artes</h1>
 
-          <p class="title">Desenvolvedor Web</p>
+          <p class="title">
+              Desenvolvedor Web
+              </br></br>
+              Marketing Digital
+          </p>
           </br></br>
           <p class="title">Marketing Digital</p>
         </div>
@@ -186,7 +190,7 @@
         <ul class="navbar-list">
 
           <li class="navbar-item">
-            <button class="navbar-link  active" data-nav-link>About</button>
+            <button class="navbar-link  active" data-nav-link>Sobre Nós</button>
           </li>
 
           <li class="navbar-item">
@@ -220,7 +224,7 @@
       <article class="about  active" data-page="about">
 
         <header>
-          <h2 class="h2 article-title">About me</h2>
+          <h2 class="h2 article-title">Sobre Nós</h2>
         </header>
 
         <section class="about-text">
@@ -474,7 +478,7 @@
 
         <section class="clients">
 
-          <h3 class="h3 clients-title">Clients</h3>
+          <h3 class="h3 clients-title">Clientes</h3>
 
           <ul class="clients-list has-scrollbar">
 
@@ -531,7 +535,7 @@
       <article class="resume" data-page="resume">
 
         <header>
-          <h2 class="h2 article-title">Resume</h2>
+          <h2 class="h2 article-title">Resumo</h2>
         </header>
 
         <section class="timeline">
@@ -724,7 +728,7 @@
       <article class="portfolio" data-page="portfolio">
 
         <header>
-          <h2 class="h2 article-title">Portfolio</h2>
+          <h2 class="h2 article-title">Portfólio</h2>
         </header>
 
         <section class="projects">
@@ -1156,7 +1160,7 @@
       <article class="contact" data-page="contact">
 
         <header>
-          <h2 class="h2 article-title">Contact</h2>
+          <h2 class="h2 article-title">Contato</h2>
         </header>
 
         <section class="mapbox" data-mapbox>
