--- a/index.html
+++ b/index.html
@@ -48,12 +48,8 @@
         <div class="info-content">
           <h1 class="name" title="Richard hanrick">Dinho Info Artes</h1>
 
-          <p class="title">
-              Desenvolvedor Web
-              </br></br>
-              Marketing Digital
-          </p>
-          </br></br>
+          <p class="title">Desenvolvedor Web</p>
+          <br>
           <p class="title">Marketing Digital</p>
         </div>
 
