--- a/index.html
+++ b/index.html
@@ -186,11 +186,11 @@
         <ul class="navbar-list">
 
           <li class="navbar-item">
-            <button class="navbar-link  active" data-nav-link>Sobre Nós</button>
+            <button class="navbar-link  active" data-nav-link>Sobre</button>
           </li>
 
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Resume</button>
+            <button class="navbar-link" data-nav-link>Resumo</button>
           </li>
 
           <li class="navbar-item">
@@ -202,7 +202,7 @@
           </li>
 
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Contact</button>
+            <button class="navbar-link" data-nav-link>Contato</button>
           </li>
 
         </ul>
@@ -217,7 +217,7 @@
         - #ABOUT
       -->
 
-      <article class="about  active" data-page="about">
+      <article class="about  active" data-page="sobre">
 
         <header>
           <h2 class="h2 article-title">Sobre Nós</h2>
@@ -528,7 +528,7 @@
         - #RESUME
       -->
 
-      <article class="resume" data-page="resume">
+      <article class="resume" data-page="resumo">
 
         <header>
           <h2 class="h2 article-title">Resumo</h2>
@@ -1153,7 +1153,7 @@
         - #CONTACT
       -->
 
-      <article class="contact" data-page="contact">
+      <article class="contact" data-page="contato">
 
         <header>
           <h2 class="h2 article-title">Contato</h2>
