--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
         <div class="info-content">
           <h1 class="name" title="Richard hanrick">Dinho Info Artes</h1>
 
-          <p class="title">Desenvolvedor Web</p>
-          <br>
           <p class="title">Marketing Digital</p>
+          <br>
+          <p class="title">Web Designer</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
